5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1861_2181.log
== TEST (2019-06-26 18:13:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(int("matrix: ")))
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:14:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(int(input("matrix: "))))
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:14:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(int(input("matrix: "))))
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(float(input("matrix: "))))
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:16:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(float(input("matrix: "))))
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:16:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(float(input("matrix: ")))).float
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:17:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(int(input("matrix: ")))).dtype=float
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:17:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: "))).dtype=float
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:19:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: "))).dtype=float
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:19:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num_matriz=shape(matriz)[0]

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:20:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num,num), dtype=int)

print(num_matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:20:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num,num), dtype=int)

print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:21:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num,num), dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:22:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros(((num**2)-num,num), dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:22:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros(((num**2)-num,num), dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:27:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	if(i+j)==n-1:
		df=df+0
	else:
		df=df+matriz[i,j]
	
print(df)
-- EXECUTION TIME:
1.20013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2181/main.py", line 9, in <module>
    if(i+j)==n-1:
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:27:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	if(i+j)==n-1:
		df=df+0
	else:
		df=df+matriz[i,j]
	
print(df)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:28:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	if(i+j)==n-1:
		zeros[i]=zeros[i]+matriz[i,j]
print(df)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:28:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	if(i+j)==n-1:
		zeros[i]=zeros[i]+matriz[i,j]
print(df)
-- EXECUTION TIME:
1.04886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2181/main.py", line 9, in <module>
    if(i+j)==n-1:
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:28:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	if(i+j)==num-1:
		zeros[i]=zeros[i]+matriz[i,j]
print(df)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:28:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	if(i+j)==num-1:
		zeros[i]=zeros[i]+matriz[i,j]
print(df)
-- EXECUTION TIME:
1.11069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/2181/main.py", line 9, in <module>
    if(i+j)==num-1:
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:29:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	for j in range(num):
		if(i+j)==num-1:
			zeros[i]=zeros[i]+matriz[i,j]
print(df)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:29:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	for j in range(num):
		if(i+j)==num-1:
			zeros[i]=zeros[i]+matriz[i,j]
print(df)
-- EXECUTION TIME:
0.946936
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
4.0
---- user output:
0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
matrix: 0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
12.3
---- user output:
matrix: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	for j in range(num):
		if(i+j)==num-1:
			zeros[i]=zeros[i]+matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	for j in range(num):
		if(i+j)!=num-1:
			zeros[i]=zeros[i]+matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:32:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	for j in range(num):
		if(i+j)!=num-1:
			zeros[i]=zeros[i]+matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0
for i in range(num):
	for j in range(num):
		if(i+j)!=num-1:
			zeros[i]=zeros[i]+matriz[i,j]
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
df=0

print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:35:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if(i+j)!=num-1:
			zeros[i]=zeros[i]+matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if(i+j)!=num-1:
			zeros[j]=zeros[j]+matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:39:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)==num-1):
			zeros[j]=zeros[j]+matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:39:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: "))).dtype=float
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)==num-1):
			zeros[j]=zeros[j]+matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=num-1):
			zeros[j]=zeros[j]+matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=num-1):
			zeros[j]=zeros[j]+matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:40:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=num-1):
			zeros[j]=zeros[j]+matriz[i,j]
print(min(zeros))
-- EXECUTION TIME:
1.19862
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
4.0
---- user output:
0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
12.3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:42:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=zeros[j]+matriz[i,j]
print(min(zeros))
-- EXECUTION TIME:
1.07641
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
4.0
---- user output:
0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
12.3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:42:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=zeros[j]+matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:42:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=zeros[j]+matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:43:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:00:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: "))).dtype=float
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:00:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: "))).dtype=float
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:01:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: "))).dtype=float
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:01:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=matriz[i,j]
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)

for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[j]=matriz[i,j]
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(min(zeros))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:05:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(round(min(zeros), 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:05:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: "))).dtype=float
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(round(min(zeros), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:06:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=int)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:07:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=float)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:07:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=float)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(round(min(zeros), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:07:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input("matrix: ")))
num=shape(matriz)[0]
zeros=zeros((num**2-num), dtype=float)
k=0
for i in range(num):
	for j in range(num):
		if((i+j)!=(num-1)):
			zeros[k]=matriz[i,j]
			k=k+1
print(round(min(zeros), 2))
-- EXECUTION TIME:
1.25155
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
12.3
---- user output:
12.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
